# kedro-image-classification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  artifacts.yaml  conda.yml  pyproject.toml
.dvc/: config
.github/workflows/: test-action.yml
conf/aws_download/: catalog.yml
conf/base/: catalog.yml  logging.yml
conf/base/aws/: config
conf/base/parameters/: data_download.yml  data_processing.yml  model.yml  model_architectures.yml  model_evaluation.yml  model_selection.yml  model_training.yml
conf/download_confs/torchvision_download/: catalog.yml
conf/model_confs/custom_conv_model/parameters/: model.yml
conf/training_confs/gpu_training/parameters/: gpu_training.yml
data/01_raw/: .gitignore  cifar-10-python.tar.gz.dvc
data/06_models/: cifar10_model_latest.ckpt.dvc
data/06_models/cifar10_model.ckpt/trained_base/: cifar10_model.ckpt.dvc
data/06_models/trained_models/: trained_base.ckpt.dvc
docs/source/: conf.py
src/: requirements.txt  setup.py
src/kedro_image_classification/: __main__.py  settings.py
src/kedro_image_classification/extras/: torchvision_datasets.py
src/kedro_image_classification/extras/datasets/: torchvision_datasets.py
src/kedro_image_classification/extras/models/: pytorch_lightning.py
src/kedro_image_classification/pipelines/data_download/: nodes.py  pipeline.py
src/kedro_image_classification/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro_image_classification/pipelines/model_evaluation/: nodes.py  pipeline.py
src/kedro_image_classification/pipelines/model_training/: nodes.py  pipeline.py
src/kedro_image_classification/pytorch/: models.py  tasks.py
src/tests/: conftest.py  test_run.py
src/tests/pipelines/data_download/: test_nodes.py  test_pipeline.py
src/tests/pipelines/data_processing/: test_nodes.py  test_pipeline.py
src/tests/pipelines/model_evaluation/: test_nodes.py  test_pipeline.py
src/tests/pipelines/model_training/: test_nodes.py  test_pipeline.py
