[tool.kedro]
package_name = "kedro_image_classification"
project_name = "kedro-image-classification"
project_version = "0.1.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_image_classification -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "kedro-image-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.13.1"
numpy = "^1.24.2"
wandb = "^0.13.10"
kedro = "^0.18.5"
kedro-viz = "^5.3.0"
dvc = {extras = ["s3"], version = "^2.45.1"}
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytorch-lightning = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"