[tool.kedro]
package_name = "kedro_image_classification"
project_name = "kedro-image-classification"
kedro_init_version = "0.18.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_image_classification -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "kedro-image-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.13.1"
numpy = "^1.24.2"
wandb = "^0.13.10"
kedro = "^0.18.5"
kedro-viz = "^5.3.0"
dvc = {extras = ["s3"], version = "^2.45.1"}
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytorch-lightning = {extras = ["tensorboardX"], version = "^1.9.4"}
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
torchvision = "^0.14.1"
fsspec = ">=2021.4,<2023.1.1"
tensorboardx = "^2.6"
tensorboard = "^2.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
